--- a/public/css/customScroll.css
+++ b/public/css/customScroll.css
@@ -1,14 +1,12 @@
 
-::-webkit-scrollbar {
-  width: 10px;
+/* ::-webkit-scrollbar {
+  width: 15px;
 }
 
 ::-webkit-scrollbar-track-piece{
-  background-color: white;
-  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.527);
 }
 
 ::-webkit-scrollbar-thumb{
-  background-color: lightgray;
-  border-radius: 10px;
-}
+  background-color: rgba(0, 0, 0, 0.309);
+} */
